--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= yield(:title) %> | CV Tutoring</title>
-    <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <title>Hi</title>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
+      </script>
+    <![endif]-->
   </head>
-
   <body>
-    <%= yield %>
+    <%= render 'layouts/header' %>
+      <div class="center jumbotron">
+        <h1>Welcome to the Tutor Program</h1>
+      
+        <h2>
+          This is the home page for the
+          Tutor application.
+        </h2>
+      
+        <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+      </div>
+    <div class="container">
+      <%= yield %>
+    </div>
+     <%= render 'layouts/footer' %>
   </body>
 </html>
