--- a/app/views/layouts/_button.html.erb
+++ b/app/views/layouts/_button.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+<%= link_to "Sign up now!", new_tutee_path, class: "btn btn-lg btn-primary" %>
