added tutor signup page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -11,7 +11,9 @@
           <br> We are: Vikram C., Adarsh C., and Jack M.
         </h2>
       
-        <%= render 'layouts/button' %>
+        <%= render 'layouts/button1' %>
+        <%= render 'layouts/button2' %>
+        
       </div>
   </body>
 </html>
