--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -9,11 +9,12 @@
       
         <h2>
           This is the help page for the
-          Tutor application. To sign up for tutoring (or to become a tutor), <br>
+          Tutor application. To sign up for tutoring, <br>
           press the button below!
         </h2>
       
-        <%= render 'layouts/button' %>
+        <%= render 'layouts/button1' %>
+        <%= render 'layouts/button2' %>
       </div>
   </body>
 </html>
