--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,8 +13,8 @@
         This is the home page for the
         Tutor application.
       </h2>
-    
-      <%= render 'layouts/button' %>
+      <%= render 'layouts/button1' %>
+      <%= render 'layouts/button2' %>
       </div>
   </body>
 </html>
