--- a/app/views/tutees/new.html.erb
+++ b/app/views/tutees/new.html.erb
@@ -1,2 +1,7 @@
 
-<h1> Congratulations! You have successfully signed up to be tutored!</h1>
+<% provide(:title, 'User registered') %>
+<div class="center jumbotron">
+    <h1> Signup Successful!</h1>
+    
+    
+</div>
