--- a/app/views/tutees/new.html.erb
+++ b/app/views/tutees/new.html.erb
@@ -2,6 +2,6 @@
 <% provide(:title, 'User registered') %>
 <div class="center jumbotron">
     <h1> Signup Successful!</h1>
-    
+    <p> lol jk u wish not yet</p>
     
 </div>
