--- a/app/views/tutees/new.html.erb
+++ b/app/views/tutees/new.html.erb
@@ -1,7 +1,29 @@
 
 <% provide(:title, 'User registered') %>
-<div class="center jumbotron">
+
+<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item" id="hmenu" onclick="openNav()">
+      	<div class="hmenu"> </div>
+      	<div class="hmenu"> </div>
+      	<div class="hmenu"> </div>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link"  id="active" href="/home">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+      	<a class="nav-link" href="/about">About</a>
+      </li>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/help">Help</a>
+      </li>
+    </ul>
+  <a class="navbar-brand" href="index.html">CV Enterprises</a>
+  </div>
+</nav>
+<div class="large_content">
     <h1> Signup Successful!</h1>
     <p> lol jk u wish not yet</p>
-    
 </div>
