--- a/app/views/tutees/signup.html.erb
+++ b/app/views/tutees/signup.html.erb
@@ -1,7 +1,30 @@
 
 <% provide(:title, 'Register') %>
-<h1>Sign up</h1>
-
+<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item" id="hmenu" onclick="openNav()">
+          	<div class="hmenu"> </div>
+          	<div class="hmenu"> </div>
+          	<div class="hmenu"> </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+          	<a class="nav-link" href="/about">About</a>
+          </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/help">Help</a>
+          </li>
+        </ul>
+      <a class="navbar-brand" href="index.html">CV Enterprises</a>
+      </div>
+    </nav>
+<div class="large_content">
+  <h1> Sign Up</h1>
+</div>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(:tutee) do |f| %>
