--- a/app/views/tutors/signup.html.erb
+++ b/app/views/tutors/signup.html.erb
@@ -1,4 +1,67 @@
 <% provide(:title, 'Become a Tutor') %>
+<head>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
+      </script>
+  <script src="jquery-3.3.1.min.js"></script>
+	<script type="text/javascript">
+		/*Scroll to top when arrow up clicked BEGIN*/
+		$(window).scroll(function() {
+		    var height = $(window).scrollTop();
+		    if (height > 100) {
+		        $('#back2Top').fadeIn();
+		    } else {
+		        $('#back2Top').fadeOut();
+		    }
+		});
+		$(document).ready(function() {
+		    $("#back2Top").click(function(event) {
+		        event.preventDefault();
+		        $("html, body").animate({ scrollTop: 0 }, "slow");
+		        return false;
+		    });
+
+		});
+		 /*Scroll to top when arrow up clicked END*/
+		function openNav() {
+		    document.getElementById("mySidenav").style.opacity = 0.8;
+		    document.getElementById("mySidenav").style.width = "13%";
+		}
+
+		/* Set the width of the side navigation to 0 */
+		function closeNav() {
+		    document.getElementById("mySidenav").style.opacity = 0;
+		    document.getElementById("mySidenav").style.width = "0";
+		}
+	</script>
+</head>
+<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item" id="hmenu" onclick="openNav()">
+          	<div class="hmenu"> </div>
+          	<div class="hmenu"> </div>
+          	<div class="hmenu"> </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+          	<a class="nav-link" href="/about">About</a>
+          </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/help">Help</a>
+          </li>
+        </ul>
+      <a class="navbar-brand" href="/home">CV Enterprises</a>
+      </div>
+    </nav>
+<div id="mySidenav" class="sidenav">
+	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+	  <h1> Quick Links </h1>
+	  <a href="/tutorsignup">Tutor Signup</a>
+	  <a href="/signup">Tutee Signup</a>
+	</div>
 <h1>Sign up</h1>
 
 <div class="row">
@@ -24,5 +87,5 @@
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
-    </div>
-    </div>
+  </div>
+</div>
