--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -4,10 +4,13 @@ button:focus{
 .row{
 	margin: 0px;
 }
+#large_content{
+	padding-bottom: 50px;
+}
 .large_content{
 	text-align: center;
 	padding: 100px;
-	padding-top: 200px;
+	padding-top: 00px;
 	background-image: url("https://images.unsplash.com/photo-1470921346718-b615f097684b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=f12ee75700589839ff988a69c452c838&auto=format&fit=crop&w=1350&q=80");
 	background-repeat: no-repeat;
 	background-size: 100%;
@@ -28,6 +31,7 @@ button:focus{
 	position: relative;
 	left: -25%;
 	line-height: 1.8em;
+	margin-bottom: 50px;
 }
 .large_content button{
 	font-family: Signika;
@@ -237,8 +241,10 @@ a:hover{
     margin-left: 50px;
 }
 .sidenav h1{
-	font-size: 40px;
+	text-align: left;
+	font-size: 38px;
 	color: white;
+	padding-left: 20px;
 }
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
@@ -262,4 +268,7 @@ a:hover{
 h1{
 	padding-left: 50px;
 	padding-top: 50px;
+}
+#bottominput{
+	margin-bottom: 24px;
 }
