--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,44 +5,8 @@
 	<title>HOME PAGE</title>
 	<link href="https://fonts.googleapis.com/css?family=Signika|Ubuntu|Quicksand|Lato|Arimo|Cabin" rel="stylesheet">
 	<script src="jquery-3.3.1.min.js"></script>
-	<script type="text/javascript">
-		/*Scroll to top when arrow up clicked BEGIN*/
-		$(window).scroll(function() {
-		    var height = $(window).scrollTop();
-		    if (height > 100) {
-		        $('#back2Top').fadeIn();
-		    } else {
-		        $('#back2Top').fadeOut();
-		    }
-		});
-		$(document).ready(function() {
-		    $("#back2Top").click(function(event) {
-		        event.preventDefault();
-		        $("html, body").animate({ scrollTop: 0 }, "slow");
-		        return false;
-		    });
-
-		});
-		 /*Scroll to top when arrow up clicked END*/
-		function openNav() {
-		    document.getElementById("mySidenav").style.opacity = 0.8;
-		    document.getElementById("mySidenav").style.width = "13%";
-		}
-
-		/* Set the width of the side navigation to 0 */
-		function closeNav() {
-		    document.getElementById("mySidenav").style.opacity = 0;
-		    document.getElementById("mySidenav").style.width = "0";
-		}
-	</script>
 </head>
 <body id="body">
-	<div id="mySidenav" class="sidenav">
-	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-	  <h1> Quick Links </h1>
-	  <a href="/tutorsignup">Tutor Signup</a>
-	  <a href="/signup">Tutee Signup</a>
-	</div>
 	<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
@@ -62,14 +26,23 @@
             <a class="nav-link" href="/help">Help</a>
           </li>
         </ul>
-      <a class="navbar-brand" href="index.html">CV Enterprises</a>
+      <a class="navbar-brand" href="/home">CV Enterprises</a>
       </div>
     </nav>
+	<div id="mySidenav" class="sidenav">
+	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+	  <h1> Quick Links </h1>
+	  <a href="/tutorsignup">Tutor Signup</a>
+	  <a href="/signup">Tutee Signup</a>
+	</div>
 	<div class="large_content">
 		<h1>Tutor Signup</h1>
-		<p> This is the home page for the Tutor Matching page. Click the button below to sign up to be a tutor! </p>
+		<p>This is the home page for the Tutor Matching page. Click the button below to sign up to be a tutor! </p>
 		<a href="/signup">
-			<button> Sign Up </button>	
+			<button> I'm a Tutee</button>	
+		</a>
+		<a href="/tutorsignup">
+			<button> I'm a Tutor</button>	
 		</a>
  	</div>
  	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
