--- a/app/views/tutees/new.html.erb
+++ b/app/views/tutees/new.html.erb
@@ -20,7 +20,7 @@
         <a class="nav-link" href="/help">Help</a>
       </li>
     </ul>
-  <a class="navbar-brand" href="index.html">CV Enterprises</a>
+  <a class="navbar-brand" href="/home">CV Enterprises</a>
   </div>
 </nav>
 <div class="large_content">
