--- a/app/views/tutees/signup.html.erb
+++ b/app/views/tutees/signup.html.erb
@@ -1,4 +1,37 @@
+<head>
+  	<link href="https://fonts.googleapis.com/css?family=Signika|Ubuntu|Quicksand|Lato|Arimo|Cabin" rel="stylesheet">
+  	<script src="jquery-3.3.1.min.js"></script>
+	<script type="text/javascript">
+		/*Scroll to top when arrow up clicked BEGIN*/
+		$(window).scroll(function() {
+		    var height = $(window).scrollTop();
+		    if (height > 100) {
+		        $('#back2Top').fadeIn();
+		    } else {
+		        $('#back2Top').fadeOut();
+		    }
+		});
+		$(document).ready(function() {
+		    $("#back2Top").click(function(event) {
+		        event.preventDefault();
+		        $("html, body").animate({ scrollTop: 0 }, "slow");
+		        return false;
+		    });
 
+		});
+		 /*Scroll to top when arrow up clicked END*/
+		function openNav() {
+		    document.getElementById("mySidenav").style.opacity = 0.8;
+		    document.getElementById("mySidenav").style.width = "13%";
+		}
+
+		/* Set the width of the side navigation to 0 */
+		function closeNav() {
+		    document.getElementById("mySidenav").style.opacity = 0;
+		    document.getElementById("mySidenav").style.width = "0";
+		}
+	</script>
+</head>
 <% provide(:title, 'Register') %>
 <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -19,13 +52,22 @@
             <a class="nav-link" href="/help">Help</a>
           </li>
         </ul>
-      <a class="navbar-brand" href="index.html">CV Enterprises</a>
+      <a class="navbar-brand" href="/home">CV Enterprises</a>
       </div>
     </nav>
-<div class="large_content">
+<div id="mySidenav" class="sidenav">
+	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+	  <h1> Quick Links </h1>
+	  <a href="/tutorsignup">Tutor Signup</a>
+	  <a href="/signup">Tutee Signup</a>
+	</div>
+<div class="large_content" id="large_content">
   <h1> Sign Up</h1>
 </div>
 <div class="row">
+  <div class="col-md-3 col-md-offset-3">
+    
+  </div>
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(:tutee) do |f| %>
 
@@ -44,8 +86,10 @@
       <%= f.password_field :password, class: 'form-control' %>
 
       <%= f.label :password_confirmation, "Re-enter password" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
+      <%= f.password_field :password_confirmation, class: 'form-control', id: 'bottominput' %>
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
+  </div>
+</div>
     
