Warnings should appear for invalid form submissions, but there is a problem with views/shared/_error_messages.html.erb that doesn't allow signup pages to be seen

--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -10,3 +10,16 @@
     </ul>
   </div>
 <% end %>
+
+<% if @tutor.errors.any? %>
+  <div id="error_explanation">
+    <div class="alert alert-danger">
+      The form contains <%= pluralize(@tutor.errors.count, "error") %>.
+    </div>
+    <ul>
+    <% @tutor.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
