--- a/app/views/tutees/new.html.erb
+++ b/app/views/tutees/new.html.erb
@@ -26,4 +26,5 @@
 <div class="large_content">
     <h1> Signup Successful!</h1>
     <p> lol jk u wish not yet</p>
+     <p> This message is brought to you by app/views/tutees/new.html.erb </p>
 </div>
