--- a/app/views/tutees/signup.html.erb
+++ b/app/views/tutees/signup.html.erb
@@ -71,6 +71,7 @@
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(:tutee) do |f| %>
 
+<%= render 'shared/error_messages' %>
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
       
