Put stuff in tutor signup html file into the tutor new html file

--- a/app/views/tutees/new.html.erb
+++ b/app/views/tutees/new.html.erb
@@ -1,4 +1,3 @@
-
 <% provide(:title, 'User registered') %>
 
 <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
@@ -26,5 +25,5 @@
 <div class="large_content">
     <h1> Signup Successful!</h1>
     <p> lol jk u wish not yet</p>
-     <p> This message is brought to you by app/views/tutees/new.html.erb </p>
+     <p> This message is brought to you by app/views/tutees/signup.html.erb </p>
 </div>
