--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -13,6 +13,9 @@
        <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
       
+      <%= f.label :id_num %>
+      <%= f.text_field :id_num, class: 'form-control' %>
+      
       <%= f.label :grade %>
       <select class = "form-control" name="Contact[email_provider]">
         <option>9</option>
