--- a/app/views/layouts/_button1.html.erb
+++ b/app/views/layouts/_button1.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "I'm a tutee", signup_path, class: "btn btn-lg btn-primary" %>
+<%= link_to "I'm a student", signup_path, class: "btn btn-lg btn-primary" %>
