--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,7 @@
-<% provide(:title, "Home") %>
+<% provide(:title, "Help") %>
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HOME PAGE</title>
 	<link href="https://fonts.googleapis.com/css?family=Signika|Ubuntu|Quicksand|Lato|Arimo|Cabin" rel="stylesheet">
 	<script src="jquery-3.3.1.min.js"></script>
 </head>
@@ -10,11 +9,6 @@
   <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item" id="hmenu" onclick="openNav()">
-          	<div class="hmenu"> </div>
-          	<div class="hmenu"> </div>
-          	<div class="hmenu"> </div>
-          </li>
           <li class="nav-item">
             <a class="nav-link"href="/home">Home <span class="sr-only">(current)</span></a>
           </li>
@@ -25,24 +19,24 @@
           <li class="nav-item active">
             <a class="nav-link"  id="active"  href="/help">Help</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/studygroup">Study Group</a>
+          </li>
         </ul>
       <a class="navbar-brand" href="/home">CV Enterprises</a>
       </div>
     </nav>
-	<div id="mySidenav" class="sidenav">
-	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-	  <h1> Quick Links </h1>
-	  <a href="/tutorsignup">Tutor Signup</a>
-	  <a href="/signup">Tutee Signup</a>
-	</div>
 	<div class="large_content">
-		<h1>Tutor Signup</h1>
-		<p>To signup, click the button below, or return to the home page using the navigation bar on the top. Additionally, you could view our quick links by pressing the
-		menu in the top left corner. </p>
-		<a href="/signup">
-			<button> Sign Up </button>	
-		</a>
- 	</div>
+		<div class="container">
+			<div class="row" class="title">
+				<div class="col-lg-6" id="border">
+					<h1>Need help?</h1>
+				</div>
+				<div class="col-lg-6">
+					<p>Click on the 'Home' page to sign up (as a tutor or a tutee) and visit the 'About' page to read about our website. </p>		
+				</div>
+			</div>
+		</div>
  	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
  	<a id="back2Top" title="Back to top" href="#">&#10148;</a>
  	<div class="filler"></div>
