--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,11 +10,6 @@
 	<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item" id="hmenu" onclick="openNav()">
-          	<div class="hmenu"> </div>
-          	<div class="hmenu"> </div>
-          	<div class="hmenu"> </div>
-          </li>
           <li class="nav-item active">
             <a class="nav-link"  id="active" href="/home">Home <span class="sr-only">(current)</span></a>
           </li>
@@ -25,28 +20,42 @@
           <li class="nav-item">
             <a class="nav-link" href="/help">Help</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/studygroup">Study Group</a>
+          </li>
         </ul>
       <a class="navbar-brand" href="/home">CV Enterprises</a>
       </div>
     </nav>
-	<div id="mySidenav" class="sidenav">
-	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-	  <h1> Quick Links </h1>
-	  <a href="/tutorsignup">Tutor Signup</a>
-	  <a href="/signup">Tutee Signup</a>
-	</div>
 	<div class="large_content">
-		<h1>Tutor Signup</h1>
-		<p>This is the home page for the Tutor Matching page. Click the button below to sign up to be a tutor! </p>
-		<a href="/signup">
-			<button> I'm a Tutee</button>	
-		</a>
+		<div class="container">
+			<div class="row" class="title">
+				<div class="col-lg-6" id="border">
+					<h1>Tutor Matching</h1>
+				</div>
+				<div class="col-lg-6">
+					<p>This is the home page for the Tutor Matching page. Click the button below to sign up to be a tutor! </p>		
+				</div>
+			</div>
+		</div>
+			
+			<a href="/signup">
+				<button> Find a Tutor</button>	
+			</a>
 		<a href="/tutorsignup">
 			<button> I'm a Tutor</button>	
 		</a>
  	</div>
  	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
- 	<a id="back2Top" title="Back to top" href="#">&#10148;</a>
+	<center>
+	 	<div class="small_content">
+			Need Help? 		
+	 	 	<p>
+	 	 		Our website will match you with a tutor in any subject - just click the button, enter your name, grade, and the subject in which you need help.
+	 	 			
+	 	 	</p>
+ 	 	</div>
+ 	</center>
  	<div class="filler"></div>
 </body>
 </html>
