--- a/app/views/tutors/signup.html.erb
+++ b/app/views/tutors/signup.html.erb
@@ -1,8 +1,6 @@
-<% provide(:title, 'Become a Tutor') %>
 <head>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
-      </script>
-  <script src="jquery-3.3.1.min.js"></script>
+  	<link href="https://fonts.googleapis.com/css?family=Signika|Ubuntu|Quicksand|Lato|Arimo|Cabin" rel="stylesheet">
+  	<script src="jquery-3.3.1.min.js"></script>
 	<script type="text/javascript">
 		/*Scroll to top when arrow up clicked BEGIN*/
 		$(window).scroll(function() {
@@ -34,14 +32,10 @@
 		}
 	</script>
 </head>
+<% provide(:title, 'Register') %>
 <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item" id="hmenu" onclick="openNav()">
-          	<div class="hmenu"> </div>
-          	<div class="hmenu"> </div>
-          	<div class="hmenu"> </div>
-          </li>
           <li class="nav-item">
             <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
           </li>
@@ -52,19 +46,20 @@
           <li class="nav-item">
             <a class="nav-link" href="/help">Help</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/studygroup">Study Group</a>
+          </li>
         </ul>
       <a class="navbar-brand" href="/home">CV Enterprises</a>
       </div>
     </nav>
-<div id="mySidenav" class="sidenav">
-	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-	  <h1> Quick Links </h1>
-	  <a href="/tutorsignup">Tutor Signup</a>
-	  <a href="/signup">Tutee Signup</a>
-	</div>
-<h1>Sign up</h1>
-
+<div class="large_content" id="large_content">
+  <h1> Sign Up</h1>
+</div>
 <div class="row">
+  <div class="col-md-3 col-md-offset-3">
+    
+  </div>
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(:tutee) do |f| %>
 
@@ -83,9 +78,10 @@
       <%= f.password_field :password, class: 'form-control' %>
 
       <%= f.label :password_confirmation, "Re-enter password" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
+      <%= f.password_field :password_confirmation, class: 'form-control', id: 'bottominput' %>
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
+    
