Successfully integrated Person model

--- a/app/views/shared/_tutee_error_maybe.html.erb
+++ b/app/views/shared/_tutee_error_maybe.html.erb
@@ -1,10 +1,10 @@
-<% if @tutee.errors.any? %>
+<% if @tutee_person.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger">
-      The form contains <%= pluralize(@tutee.errors.count, "error") %>.
+      The form contains <%= pluralize(@tutee_person.errors.count, "error") %>.
     </div>
     <ul>
-    <% @tutee.errors.full_messages.each do |msg| %>
+    <% @tutee_person.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
     <% end %>
     </ul>
