--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -29,16 +29,10 @@
     </nav>
 		<div class="large_content">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-6" id="border">
-					<h1>About Us</h1>
-				</div>
-				<div class="col-lg-6">
-					<p>This website serves as a place to match a tutor with a tutee. We do not take responsibility for any issues
-					that occur as a result of using this website.
-					</p>		
-				</div>
-			</div>
+			<h1>About Us</h1>
+			<p id="homep">This website serves to match a tutor with a tutee. We do not take responsibility for any issues
+			that occur as a result of using this website.
+			</p>
 		</div>
  	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
  	<a id="back2Top" title="Back to top" href="#">&#10148;</a>
