--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -9,11 +9,15 @@ button:focus{
 }
 .small_content{
 	padding: 30px;
+	width: 100%;
+	padding-left: 25%;
+	padding-right: 25%;
 	font-family: Signika;
 	font-size: 50px;
 	float: center;
 	display: block;
-	background-color: #669999;
+	background-color: #eee;
+	padding-bottom: 100px;
 }
 .small_content p{
 	font-size: 20px;
@@ -30,13 +34,14 @@ button:focus{
 	padding-bottom: 50px;
 	text-align: center;
 	padding-top: 100px;
-	background-image: url("https://images.unsplash.com/photo-1470921346718-b615f097684b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=f12ee75700589839ff988a69c452c838&auto=format&fit=crop&w=1350&q=80");
+	background-image: url("https://images.pexels.com/photos/355887/pexels-photo-355887.jpeg?auto=compress&cs=tinysrgb&h=650&w=940");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	width: 100%;
 }
 .large_content h1{
 	color: white;
+	font-weight: bold;
 	font-family: Cabin;
 	font-size: 90px;
 	margin-bottom: 50px;
@@ -52,8 +57,13 @@ button:focus{
 	line-height: 1.8em;
 	margin-bottom: 50px;
 }
+#homep{
+	width: 100%;
+	text-align: center;
+	display: inline-block;
+}
 .large_content button{
-	font-family: Signika;
+	font-family: Lato;
 	font-size: 22px;
 	margin-top: 30px;
 	width: 10em;
@@ -84,6 +94,7 @@ button:focus{
 	line-height: 2em;
 }
 .col-lg-8 button{
+	position: relative;
 	padding: 15px;
 	width: 10em;
 	border-radius: 10px;
@@ -133,9 +144,9 @@ a:hover{
   padding-bottom: 0;
   font-family: Signika;
 }
- .navbar-brand{
-  font-size: 15px;
- }
+.navbar-light .navbar-brand {
+	font-size: 15px;
+}
 .nav-item{
   font-size: 16px;
   position: relative;
