--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -28,14 +28,9 @@
     </nav>
 	<div class="large_content">
 		<div class="container">
-			<div class="row" class="title">
-				<div class="col-lg-6" id="border">
-					<h1>Need help?</h1>
-				</div>
-				<div class="col-lg-6">
-					<p>Click on the 'Home' page to sign up (as a tutor or a tutee) and visit the 'About' page to read about our website. </p>		
-				</div>
-			</div>
+			<h1>Need help?</h1>
+			<p id="homep">Click on the 'Home' page to sign up (as a tutor or a tutee) and visit the 'About' page to read about our website.
+			              If you need additional help, please email <a target="_blank" style="color: #00BFFF;"href="https://mail.google.com/mail/?view=cm&fs=1&to=alexgiantseed@gmail.com&su=Help - Tutor Matching&body=&bcc=">joe_schmoe@gmail.com</a></p>		
 		</div>
  	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
  	<a id="back2Top" title="Back to top" href="#">&#10148;</a>
