--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -29,33 +29,18 @@
     </nav>
 	<div class="large_content">
 		<div class="container">
-			<div class="row" class="title">
-				<div class="col-lg-6" id="border">
-					<h1>Tutor Matching</h1>
-				</div>
-				<div class="col-lg-6">
-					<p>This is the home page for the Tutor Matching page. Click the button below to sign up to be a tutor! </p>		
-				</div>
-			</div>
+			<h1 id="homeh1">Tutor Matching</h1>
+			<p id="homep">This is the home page for the Tutor Matching page. Click the button below to sign up to be a tutor! </p>		
 		</div>
 			
-			<a href="/signup">
-				<button> Find a Tutor</button>	
-			</a>
+		<a href="/signup">
+				<button id="button"> Find a Tutor</button>	
+		</a>
 		<a href="/tutorsignup">
-			<button> I'm a Tutor</button>	
+			<button id="tutor"> I'm a Tutor</button>	
 		</a>
  	</div>
  	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
-	<center>
-	 	<div class="small_content">
-			Need Help? 		
-	 	 	<p>
-	 	 		Our website will match you with a tutor in any subject - just click the button, enter your name, grade, and the subject in which you need help.
-	 	 			
-	 	 	</p>
- 	 	</div>
- 	</center>
  	<div class="filler"></div>
 </body>
 </html>
