--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -48,6 +48,9 @@
  	</div>
  	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
 	<center>
+		<div id = "bob">
+			
+		</div>
 	 	<div class="small_content">
 			Need Help? 		
 	 	 	<p>
