--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -11,7 +11,7 @@ button:focus{
 	padding: 25px;
 }
 .small_content{
-	padding: 300px;
+	padding: 250px 300px 300px 300px;
 	font-family: Signika;
 	font-size: 50px;
 	color: white;
@@ -25,6 +25,7 @@ button:focus{
 .small_content p{
 	font-size: 20px;
 	font-family: Lato;
+	text-align: center;
 }
 .col-lg-6{
 	text-align: center;
@@ -313,4 +314,12 @@ h1{
 }
 .col-lg-6 h1{
 	z-index: 100;
+}
+
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
 }
