--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -11,7 +11,7 @@ button:focus{
 	padding: 25px;
 }
 .small_content{
-	padding: 300px;
+	padding: 250px 300px 300px 300px;
 	padding: 30px;
 	width: 100%;
 	padding-left: 25%;
@@ -328,7 +328,6 @@ h1{
 }
 .col-lg-6 h1{
 	z-index: 100;
-<<<<<<< HEAD
 }
 
 #error_explanation {
@@ -337,6 +336,4 @@ h1{
     color: red;
     margin: 0 0 30px 0;
   }
-=======
->>>>>>> ef7e74c623d132dff2eba497d968183d9dca6b59
 }
