--- a/app/views/tutees/signup.html.erb
+++ b/app/views/tutees/signup.html.erb
@@ -1,13 +1,66 @@
-<% provide(:title, 'User registered') %>
+<% provide(:title, 'Help MEEEEE!')%>
 <head>
   	<link href="https://fonts.googleapis.com/css?family=Signika|Ubuntu|Quicksand|Lato|Arimo|Cabin" rel="stylesheet">
   	<script src="jquery-3.3.1.min.js"></script>
+	<script type="text/javascript"> 
+		/*Scroll to top when arrow up clicked BEGIN*/
+		$(window).scroll(function() {
+		    var height = $(window).scrollTop();
+		    if (height > 100) {
+		        $('#back2Top').fadeIn();
+		    } else {
+		        $('#back2Top').fadeOut();
+		    }
+		});
+		$(document).ready(function() {
+		    $("#back2Top").click(function(event) {
+		        event.preventDefault();
+		        $("html, body").animate({ scrollTop: 0 }, "slow");
+		        return false;
+		    });
+
+		});
+		 /*Scroll to top when arrow up clicked END*/
+		function openNav() {
+		    document.getElementById("mySidenav").style.opacity = 0.8;
+		    document.getElementById("mySidenav").style.width = "13%";
+		}
+
+		/* Set the width of the side navigation to 0 */
+		function closeNav() {
+		    document.getElementById("mySidenav").style.opacity = 0;
+		    document.getElementById("mySidenav").style.width = "0";
+		}
+	</script>
 </head>
+<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+          	<a class="nav-link" href="/about">About</a>
+          </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/help">Help</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/studygroup">Study Group</a>
+          </li>
+        </ul>
+      <a class="navbar-brand" href="/home">CV Enterprises</a>
+      </div>
+    </nav>
 <div class="large_content" id="large_content">
   <h1> NEED HELP!</h1>
 </div>
 <div class="row">
   <div class="col-md-3 col-md-offset-3">
+    
+<% provide(:title, 'User registered') %>
+
 <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -28,7 +81,6 @@
       </li>
     </ul>
   <a class="navbar-brand" href="/home">CV Enterprises</a>
->>>>>>> d1c3a16402fdebeade2fa2464e599781df99fd51
   </div>
 </nav>
 <div class="large_content">
