--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -27,23 +27,15 @@
   <h1> Sign Up</h1>
 </div>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
-<<<<<<< HEAD
-    <%= form_for(@tutor_person, url: signup_path) do |f| %>
   <div class="col-md-3 col-md-offset-3">
-=======
-    <%= form_for(@tutor_person, url: tutorsignup_path) do |f| %>
->>>>>>> 13cd8161c82281d79495cbfbbe908d2fa2396405
     
   </div>
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(:tutee) do |f| %>
-
+  <div  class="col-md-6 col-md-offset-3">
+    <%= form_for(@tutor_person, url: tutorsignup_path) do |f| %>
+    <%= render 'shared/error_messages' %>
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
       
-      <%= f.label :grade %>
-      <select class = "form-control" name="Contact[email_provider]">
        <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
       
@@ -51,13 +43,13 @@
       <%= f.text_field :id_num, class: 'form-control' %>
       
      <%= f.label :grade %>
-      <%= f.text_field :grade, class: 'form-control' %>
-  <!--   <select class = "form-control" name="Contact[email_provider]">
+     <select class = "form-control" name="Contact[email_provider]">
         <option>9</option>
         <option>10</option>
         <option>11</option>
         <option>12</option>
-      </select>  -->
+      </select>  
+      
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
 
@@ -68,4 +60,3 @@
     <% end %>
   </div>
 </div>
-    
